# equity-analyst

./: .env.example  .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
.claude/: settings.json
.claude/skills/add-analyst/: SKILL.md
.claude/skills/forecast-skill-check/: SKILL.md
.claude/skills/run-analysis/: SKILL.md
.claude/skills/weekly-pipeline/: SKILL.md
docs/: GETTING_STARTED.md
src/equity_analyst/: __init__.py  __main__.py  comparison.py  config.py  digest.py  etf_exposure.py  etf_strategy.py  levels.py  notify.py  pipeline.py  rank.py  report.py  screen.py  session.py  skill_report.py
src/equity_analyst/committee/: __init__.py  base.py  consensus.py  fundamental.py  news_social.py  portfolio_manager.py  research.py  technical.py  verdict.py
src/equity_analyst/data/: __init__.py  base.py  yahoo.py
src/equity_analyst/forecast/: __init__.py  engine.py  metrics.py  types.py
src/equity_analyst/llm/: __init__.py  anthropic_client.py  base.py  config.py
src/equity_analyst/storage/: __init__.py  db.py  export.py  repository.py
tests/: test_committee.py  test_consensus.py  test_data.py  test_digest.py  test_etf_exposure.py  test_etf_strategy.py  test_forecast.py  test_insights.py  test_levels.py  test_llm.py  test_metrics.py  test_notify.py  test_pipeline.py  test_rank.py  test_report.py  test_screen.py  test_session.py  test_smoke.py  test_storage.py
tests/fixtures/: __init__.py  llm.py  synthetic.py
