[project]
name = "equity-analyst"
version = "0.0.1"
description = "An equity research tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dana", email = "dhagist@gmail.com" }]
dependencies = [
    "pandas>=2.0",
    "yfinance>=0.2",
]

[project.optional-dependencies]
# Forecasting engine (Technical analyst). Kept optional so the core package and
# its tests install fast; CI/dev pulls it in explicitly.
forecast = [
    "statsforecast>=1.7",
    "mlforecast>=0.13",
    "utilsforecast>=0.2",
    "lightgbm>=4.0",
]
# Deep-learning models, off by default (see CLAUDE.md — must beat baselines first).
neural = [
    "neuralforecast>=1.7",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
equity-analyst = "equity_analyst.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
